--- a/nomad_coders/react/index.html
+++ b/nomad_coders/react/index.html
@@ -14,16 +14,106 @@
   <script type="text/babel">
     const root = document.querySelector("#root");
 
-    const App = () => {
-      const [counter, setCounter] = React.useState(0);
-      const onClick = () => {
-        setCounter(counter + 1);
+    const MinutesToHours = () => {
+      const [amount, setAmount] = React.useState();
+      const [inverted, setInverted] = React.useState(false);
+
+      const onChange = (e) => {
+        setAmount(e.target.value);
+      };
+
+      const resetHandler = () => {
+        setAmount(0);
+      };
+
+      const onInvert = () => {
+        resetHandler();
+        setInverted((pre) => !pre);
       };
 
       return (
         <div>
-          <h3>Total clicks: {counter}</h3>
-          <button onClick={onClick}>Click me</button>
+          <label for="minute">Minute</label>
+          <input
+            id="minute"
+            value={inverted ? amount * 60 : amount}
+            onChange={onChange}
+            type="number"
+            placeholder="Minute"
+            disabled={inverted}
+          />
+
+          <label for="hour">Hour</label>
+          <input
+            id="hour"
+            value={inverted ? amount : Math.round(amount / 60)}
+            onChange={onChange}
+            type="number"
+            placeholder="Hours"
+            disabled={!inverted}
+          />
+          <button onClick={resetHandler}>Reset</button>
+          <button onClick={onInvert}>
+            {inverted ? "Turn back" : "Invert"}
+          </button>
+        </div>
+      );
+    };
+    const KmToMiles = () => {
+      const [distance, setDistance] = React.useState(0);
+      const [inverted, setInverted] = React.useState(false);
+
+      const resetHandler = () => {
+        setDistance(0);
+      };
+
+      const invertHandler = () => {
+        resetHandler();
+        setInverted((prev) => !prev);
+      };
+
+      const onChange = (e) => {
+        setDistance(e.target.value);
+      };
+
+      return (
+        <div>
+          <label for="km">Km</label>
+          <input
+            value={inverted ? distance * 1.609344 : distance}
+            placeholder="km"
+            disabled={inverted}
+            onChange={onChange}
+          />
+          <label for="miles">Miles</label>
+          <input
+            value={inverted ? distance : distance * 0.621371}
+            placeholder="miles"
+            disabled={!inverted}
+            onChange={onChange}
+          />
+          <button onClick={resetHandler}>Reset</button>
+          <button onClick={invertHandler}>
+            {inverted ? "Turn back" : "Invert"}
+          </button>
+        </div>
+      );
+    };
+    const App = () => {
+      const [index, setIndex] = React.useState("-1");
+      const onSelect = (e) => {
+        setIndex(e.target.value);
+      };
+      return (
+        <div>
+          <h1>Super Converter</h1>
+          <select value={index} onChange={onSelect}>
+            <option value="-1">Select your unit</option>
+            <option value="0">Minutes & Hours</option>
+            <option value="1">Km & Miles</option>
+          </select>
+          {index === "0" && <MinutesToHours />}
+          {index === "1" && <KmToMiles />}
         </div>
       );
     };
